MANVIR SANDBOX/src/objects/Opp_Snapshot_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commverge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comptel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emericom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMV Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdotTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intracom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masiya Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nortel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riyada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technomen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascension Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Antarctic Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM__c</fullName>
        <label>GM%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Opportunity Region</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AsiaPAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Ref__c</fullName>
        <label>Sales Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Traf Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI &amp; Rev Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pers &amp; Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sec &amp; Con</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Truncated_Comments__c</fullName>
        <label>Truncated Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Book__c</fullName>
        <formula>Probability__c * Book__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Book</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opp Snapshot Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Ref__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Probability__c</columns>
        <columns>Book__c</columns>
        <columns>GM__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Channel__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OppSS-{dd}-{mm}-{yy}-{0}</displayFormat>
        <label>Opp Snapshot Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Snapshot Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>